[metadata]
name = WestJR
version = attr: westjr.__version__
description = Handling of train operation information of JR West, a railroad company in Japan
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ueyacat/westjr
author = unyacat
author_email = admin@unyacat.net
license = Unlicense
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
keywords =
    westjr

[options]
packages = find:
install_requires =
    requests>=2.26.0
    types-requests>=2.27.11
python_requires = >=3.7
include_package_data = True

[options.extras_require]
dev =
    black
    flake8
    isort
    mypy
    pre-commit
    pytest
    setuptools>=46.4.0
    types-setuptools
    wheel

[options.package_data]
westjr = py.typed

[isort]
profile = black

[flake8]
indent-size = 4
max-line-length = 120
per-file-ignores =
    tests/test_example.py:E501
    example.py:E501

[mypy]
python_version = 3.9
show_error_codes = True
pretty = True
strict = True

[tool:black]
line-length = 88
